--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
  <body>
     <h1>Anders Ekdahl´s Resume</h1>
-    <img src="./assets/images/anders.gif" height=200 alt= "Picture of Anders">>
+    <img src="./assets/images/Anders.gif" height=200 alt= "Picture of Anders">>
     <h2>Summary</h2>
     <p>
         Born in 1960 in Helsingborg,Sweden. 
